--- a/src/static/StatsBox.css
+++ b/src/static/StatsBox.css
@@ -1,3 +1,19 @@
 h1 {
   text-align: center;
 }
+
+.StatsBox {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-items: stretch;
+  justify-content: stretch;
+}
+
+.finances-and-recent-actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  align-content: stretch;
+}
